--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,13 @@ textarea {
 .rack_body {
     width: 100%;
     height: 697px;
+    position: relative;
+}
+.rack-container-div {
+    width: 80%;
+    height: 300px;
+    position: absolute;
+    left: 40px
 }
 
 .first {
