--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ textarea {
 
 .rack_container {
     width: 402px;
-    height: 767px;
+    height: auto;
     border: 1px solid black;
     border-radius: 5px;
 }
@@ -153,7 +153,7 @@ textarea {
 
 .rack_body {
     width: 100%;
-    height: 697px;
+    height: auto;
     position: relative;
 }
 
