--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ textarea {
 
 .data_rectangle {
     margin: auto;
-    border-radius: 3px;
+    border-radius: 4px;
     border: 1px solid black;
     width: auto;
     position: absolute;
@@ -112,7 +112,7 @@ textarea {
 
 .sub_menu_rectangle {
     margin: auto;
-    border-radius: 3px;
+    border-radius: 4px;
     border: 1px solid black;
     width: auto;
     position: absolute;
@@ -271,7 +271,7 @@ textarea {
     width: 80%;
     height: 100%;
     float: left;
-    background-color: brown;
+    background-color: yellowgreen;
     text-align: center;
     display: flex;
     justify-content: center;
