--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ textarea {
     float: left;
     text-align: center;
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     flex-direction: column;
     font-size: 13px;
 }
